// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabContainer should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TabContainer
    editSchedule={[Function]}
    schedule={
        Array [
            Object {
              "event_id": 1,
            },
          ]
    }
    scheduleGenerator={[Function]}
    tabs={
        Array [
            "Schedule",
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <ul>
          <Unknown
                    handleTabClick={[Function]}
                    isActive={true}
                    tabName="Schedule"
          />
</ul>,
        <article
          className="active-content"
>
          <Schedule
                    admin={undefined}
                    deleteFromSchedule={undefined}
                    editSchedule={[Function]}
                    event={
                              Object {
                                        "event_id": 1,
                                      }
                    }
                    staffList={undefined}
          />
</article>,
      ],
      "className": "tab-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Unknown
              handleTabClick={[Function]}
              isActive={true}
              tabName="Schedule"
/>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "Schedule0",
            "nodeType": "function",
            "props": Object {
              "handleTabClick": [Function],
              "isActive": true,
              "tabName": "Schedule",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Schedule
              admin={undefined}
              deleteFromSchedule={undefined}
              editSchedule={[Function]}
              event={
                            Object {
                                          "event_id": 1,
                                        }
              }
              staffList={undefined}
/>,
          ],
          "className": "active-content",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "admin": undefined,
              "deleteFromSchedule": undefined,
              "editSchedule": [Function],
              "event": Object {
                "event_id": 1,
              },
              "staffList": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "article",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ul>
            <Unknown
                        handleTabClick={[Function]}
                        isActive={true}
                        tabName="Schedule"
            />
</ul>,
          <article
            className="active-content"
>
            <Schedule
                        admin={undefined}
                        deleteFromSchedule={undefined}
                        editSchedule={[Function]}
                        event={
                                    Object {
                                                "event_id": 1,
                                              }
                        }
                        staffList={undefined}
            />
</article>,
        ],
        "className": "tab-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Unknown
                handleTabClick={[Function]}
                isActive={true}
                tabName="Schedule"
/>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "Schedule0",
              "nodeType": "function",
              "props": Object {
                "handleTabClick": [Function],
                "isActive": true,
                "tabName": "Schedule",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Schedule
                admin={undefined}
                deleteFromSchedule={undefined}
                editSchedule={[Function]}
                event={
                                Object {
                                                "event_id": 1,
                                              }
                }
                staffList={undefined}
/>,
            ],
            "className": "active-content",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "admin": undefined,
                "deleteFromSchedule": undefined,
                "editSchedule": [Function],
                "event": Object {
                  "event_id": 1,
                },
                "staffList": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "article",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TabContainer should match the snapshot with admin tabs 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TabContainer
    editSchedule={[Function]}
    schedule={
        Array [
            Object {
              "event_id": 1,
            },
          ]
    }
    tabs={
        Array [
            "Add Event",
            "Add New Staff",
            "Schedule",
            "Submit Availability",
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <ul>
          <Unknown
                    handleTabClick={[Function]}
                    isActive={true}
                    tabName="Add Event"
          />
          <Unknown
                    handleTabClick={[Function]}
                    isActive={false}
                    tabName="Add New Staff"
          />
          <Unknown
                    handleTabClick={[Function]}
                    isActive={false}
                    tabName="Schedule"
          />
          <Unknown
                    handleTabClick={[Function]}
                    isActive={false}
                    tabName="Submit Availability"
          />
</ul>,
        <article
          className="active-content"
>
          <EventForm
                    checkManualSchedule={[Function]}
                    scheduleGenerator={undefined}
          />
</article>,
      ],
      "className": "tab-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Unknown
              handleTabClick={[Function]}
              isActive={true}
              tabName="Add Event"
/>,
            <Unknown
              handleTabClick={[Function]}
              isActive={false}
              tabName="Add New Staff"
/>,
            <Unknown
              handleTabClick={[Function]}
              isActive={false}
              tabName="Schedule"
/>,
            <Unknown
              handleTabClick={[Function]}
              isActive={false}
              tabName="Submit Availability"
/>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "Add Event0",
            "nodeType": "function",
            "props": Object {
              "handleTabClick": [Function],
              "isActive": true,
              "tabName": "Add Event",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "Add New Staff1",
            "nodeType": "function",
            "props": Object {
              "handleTabClick": [Function],
              "isActive": false,
              "tabName": "Add New Staff",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "Schedule2",
            "nodeType": "function",
            "props": Object {
              "handleTabClick": [Function],
              "isActive": false,
              "tabName": "Schedule",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "Submit Availability3",
            "nodeType": "function",
            "props": Object {
              "handleTabClick": [Function],
              "isActive": false,
              "tabName": "Submit Availability",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <EventForm
            checkManualSchedule={[Function]}
            scheduleGenerator={undefined}
/>,
          "className": "active-content",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checkManualSchedule": [Function],
            "scheduleGenerator": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "article",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ul>
            <Unknown
                        handleTabClick={[Function]}
                        isActive={true}
                        tabName="Add Event"
            />
            <Unknown
                        handleTabClick={[Function]}
                        isActive={false}
                        tabName="Add New Staff"
            />
            <Unknown
                        handleTabClick={[Function]}
                        isActive={false}
                        tabName="Schedule"
            />
            <Unknown
                        handleTabClick={[Function]}
                        isActive={false}
                        tabName="Submit Availability"
            />
</ul>,
          <article
            className="active-content"
>
            <EventForm
                        checkManualSchedule={[Function]}
                        scheduleGenerator={undefined}
            />
</article>,
        ],
        "className": "tab-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Unknown
                handleTabClick={[Function]}
                isActive={true}
                tabName="Add Event"
/>,
              <Unknown
                handleTabClick={[Function]}
                isActive={false}
                tabName="Add New Staff"
/>,
              <Unknown
                handleTabClick={[Function]}
                isActive={false}
                tabName="Schedule"
/>,
              <Unknown
                handleTabClick={[Function]}
                isActive={false}
                tabName="Submit Availability"
/>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "Add Event0",
              "nodeType": "function",
              "props": Object {
                "handleTabClick": [Function],
                "isActive": true,
                "tabName": "Add Event",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "Add New Staff1",
              "nodeType": "function",
              "props": Object {
                "handleTabClick": [Function],
                "isActive": false,
                "tabName": "Add New Staff",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "Schedule2",
              "nodeType": "function",
              "props": Object {
                "handleTabClick": [Function],
                "isActive": false,
                "tabName": "Schedule",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "Submit Availability3",
              "nodeType": "function",
              "props": Object {
                "handleTabClick": [Function],
                "isActive": false,
                "tabName": "Submit Availability",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <EventForm
              checkManualSchedule={[Function]}
              scheduleGenerator={undefined}
/>,
            "className": "active-content",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checkManualSchedule": [Function],
              "scheduleGenerator": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "article",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
